fix logo-container margin on small screens

--- a/scss/components/logo-container.scss
+++ b/scss/components/logo-container.scss
@@ -1,16 +1,20 @@
 .logo-container {
-    width: 160px;
-    height: 160px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 160px;
+  height: 160px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // margin-top: $content-top-margin;
+  // margin-bottom: $content-top-margin;
+  background: transparent;
+  border: 1px solid $fields-border-color;
+  border-radius: $fields-border-radius;
+  // padding: $padding-y;
+  @media only screen and (min-width: 40.063em) {
+    float: right;
+  }
+  margin-top: $content-top-margin/2;
+  @media screen and (min-height: 800px) {
     margin-top: $content-top-margin;
-    // margin-bottom: $content-top-margin;
-    background: transparent;
-    border: 1px solid $fields-border-color;
-    border-radius: $fields-border-radius;
-    // padding: $padding-y;
-    @media only screen and (min-width: 40.063em) {
-        float: right;
-    }
+  }
 }
